# plugin-fs

./: .gitignore  Cargo.toml  LICENSE-MIT.txt  README.md  TESTING.md  build.rs  package-lock.json  package.json  rollup.config.js  tsconfig.build.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml  test.yml
android/: .gitignore  build.gradle.kts  settings.gradle
android/src/androidTest/java/: ExampleInstrumentedTest.kt  RawFileInstrumentedTest.kt
android/src/main/java/: AFFileDescriptor.kt  AFJSObject.kt  AFMediaStore.kt  AFNotification.kt  AFStorageVolume.kt  AFThumbnails.kt  AFUtils.kt  AndroidFsPlugin.kt  DocumentFileController.kt  Example.kt  ExamplePlugin.kt  FileController.kt  MediaFileController.kt  RawFileController.kt
android/test-support/tauri-api/: build.gradle.kts
examples/tauri-app/: README.md  index.html  package-lock.json  package.json
examples/tauri-app/src/: App.svelte  style.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-rust-side-app/: .gitignore  README.md  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
examples/tauri-rust-side-app/src/: App.svelte  main.js  style.css
examples/tauri-rust-side-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-rust-side-app/src-tauri/capabilities/: default.json
examples/tauri-rust-side-app/src-tauri/src/: lib.rs  main.rs
guest-js/: android.ts  index.ts  ios.ts
ios/: .gitignore  Package.swift  README.md
ios/Sources/: ExamplePlugin.swift
ios/Sources/VnidropFsCore/: VnidropFsCore.swift
ios/Sources/VnidropFsPlugin/: VnidropFsPlugin.swift
ios/Tests/VnidropFsCoreTests/: VnidropFsCoreTests.swift
ios/test-support/tauri-api/: Package.swift
permissions/: all-without-delete.toml  all.toml  default.toml  read-only.toml  scope.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: check_persisted_picker_uri_permission.toml  check_picker_uri_permission.toml  check_public_files_permission.toml  close_all_file_streams.toml  count_all_file_streams.toml  create_dir.toml  create_new_dir.toml  create_new_file.toml  create_new_public_audio_file.toml  create_new_public_file.toml  create_new_public_image_file.toml  create_new_public_video_file.toml  get_android_api_level.toml  get_byte_length.toml  get_fs_path.toml  get_metadata.toml  get_mime_type.toml  get_name.toml  get_thumbnail.toml  get_thumbnail_as_base64.toml  get_thumbnail_as_bytes.toml  get_thumbnail_as_data_url.toml  get_type.toml  list_volumes.toml  open_read_file_stream.toml  open_read_text_file_lines_stream.toml  open_write_file_stream.toml  persist_picker_uri_permission.toml  read_file_as_base64.toml  read_file_as_data_url.toml  release_all_persisted_picker_uri_permissions.toml  release_persisted_picker_uri_permission.toml  remove_dir_all.toml  remove_empty_dir.toml  rename_dir.toml  rename_file.toml  request_public_files_permission.toml  scan_public_file.toml  set_public_file_pending.toml  show_open_dir_picker.toml  (+6 more)
permissions/schemas/: schema.json
src/: fs.rs  lib.rs  mobile.rs
src/api/: android_fs.rs  app_storage.rs  file_opener.rs  file_picker.rs  mod.rs  private_storage.rs  progress_notification_guard.rs  public_storage.rs  utils.rs
src/api/consts/: api_level.rs  mod.rs
src/api/impls/: ext.rs  mod.rs  raw.rs
src/api/models/: dir.rs  entry.rs  error.rs  file_access.rs  file_picker.rs  file_uri.rs  image.rs  ios_uri.rs  mod.rs  notification.rs  storage_volume.rs
src/cmds/: mod.rs  state.rs  utils.rs
src/config/: mod.rs
src/protocols/: mod.rs  protocol_content.rs  protocol_thumbnail.rs  state.rs  utils.rs
src/scope/: mod.rs
src/utils/: async_sleep.rs  mod.rs
tests/: model_contracts.rs  permissions.rs  plugin_mock_runtime.rs  rust_backend_streams.rs
tests/js/: index.test.ts
tests/support/: mod.rs
tests/types/: package-imports.ts
(+16 files in other folders)
